# rustici

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
examples/: list_sas.rs  list_sas_streaming.rs
src/: client.rs  error.rs  lib.rs  packet.rs  wire.rs
tests/: client_timeout_tests.rs
